added basic project logic

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@
 #mongodb+srv://jimmyzhou0818_db_user:eKnlaaeH5rQwze6s@hophacks.36fafro.mongodb.net/?retryWrites=true&w=majority&appName=hophacks
 
 MONGODB_URI=mongodb+srv://jimmyzhou0818_db_user:eKnlaaeH5rQwze6s@hophacks.36fafro.mongodb.net/?retryWrites=true&w=majority&appName=hophacks
+
+PORT=3001
