added github connection

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@
 MONGODB_URI=mongodb+srv://jimmyzhou0818_db_user:eKnlaaeH5rQwze6s@hophacks.36fafro.mongodb.net/?retryWrites=true&w=majority&appName=hophacks
 
 PORT=3001
+
+GITHUB_CLIENT_ID=Ov23licFAWk4OtBYFO5F
+GITHUB_CLIENT_SECRET=fb648db86deb525773cf6b8d9dc984382fb547b2
+GITHUB_CALLBACK_URL=http://localhost:3001/auth/github/callback
+FRONTEND_URL=http://localhost:5173
