added company login

--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,27 @@
-#eKnlaaeH5rQwze6s
-#jimmyzhou0818_db_user
-#mongodb+srv://jimmyzhou0818_db_user:eKnlaaeH5rQwze6s@hophacks.36fafro.mongodb.net/?retryWrites=true&w=majority&appName=hophacks
+# Environment configuration for backend
+# IMPORTANT: Do NOT commit secrets to git. Keep this file out of version control.
 
+# MongoDB connection string (replace with your connection URI)
 MONGODB_URI=mongodb+srv://jimmyzhou0818_db_user:eKnlaaeH5rQwze6s@hophacks.36fafro.mongodb.net/?retryWrites=true&w=majority&appName=hophacks
 
+# Server port
 PORT=3001
 
+# GitHub OAuth app credentials
 GITHUB_CLIENT_ID=Ov23licFAWk4OtBYFO5F
-GITHUB_CLIENT_SECRET=fb648db86deb525773cf6b8d9dc984382fb547b2
+GITHUB_CLIENT_SECRET=da8a8405c3fd0d6abb76029782cf0078f9acb4cf
 GITHUB_CALLBACK_URL=http://localhost:3001/auth/github/callback
 FRONTEND_URL=http://localhost:5173
+
+# Gemini / Vertex AI configuration
+# Either provide GEMINI_API_KEY (Bearer) or configure GOOGLE_APPLICATION_CREDENTIALS for service-account auth
+GEMINI_API_KEY=AIzaSyAhZVkte4nZnLce2YziYMM3YjpssTtkm7c
+# Use model names WITHOUT double 'models/' prefix to avoid confusion; code tolerates either form
+GEMINI_EMBEDDING_MODEL=embedding-001
+GEMINI_MODEL=text-bison-001
+# Optional: GCP project and region for Vertex AI hosted models. If set, code will call
+# the regional Vertex `predict` endpoint: https://{region}-aiplatform.googleapis.com
+# Example: GEMINI_PROJECT=my-gcp-project
+GEMINI_PROJECT=
+GEMINI_REGION=us-central1
+
