--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "seed:embeddings": "node scripts/seed-embeddings.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "google-auth-library": "^10.3.0",
     "mongoose": "^8.7.1",
-    "nodemon": "^3.1.10"
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.10",
+    "pdf-parse": "^1.1.1"
   }
 }
