fixed landing page and other parts

--- a/backend/.env
+++ b/backend/.env
@@ -25,8 +25,8 @@ GEMINI_MODEL=text-bison-001
 GEMINI_PROJECT=
 GEMINI_REGION=us-central1
 
-SMTP_HOST=smtp.mailtrap.io
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=yunchengzhou@gmail.com
-SMTP_PASS=ymyh liqy bmsx etmv
+SMTP_PASS="ymyh liqy bmsx etmv"
 EMAIL_FROM="Commit For Good <yunchengzhou@gmail.com>"
